--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,3 +34,22 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+  runapp:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Run Python App
+      run: python main.py
+      
+    - name: Save Output
+      run: echo "${{ steps.run_python_app.outputs.stdout }}" > output.txt
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: python-app-artc
+        path: output.txt
