Update python-app workflow
Remove flake & pytest, added bandit and pycodesytle

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,17 +23,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+
+    - name: Run security checks
+      uses: bandit/bandit-action@v3  # Code security checks
+
+    - name: Run code linting
+      uses: pycodestyle/pycodestyle-action@v2  # Code style checks
 
   runapp:
     needs: build
@@ -52,5 +48,5 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: python-app-artc
+        name: python-app-artifact
         path: output.txt
