--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,7 +4,12 @@
 name: Python application
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: read
