--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,7 +38,12 @@ jobs:
 
     - name: Run code linting
       uses: andymckay/pycodestyle-action@0.1.3
-
+      
+    - uses: actions/upload-artifact@v4
+      with:
+        name: bandit-artifact
+        path: results.sarif
+  
   runapp:
     needs: build
     runs-on: ubuntu-latest
