--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,7 +43,10 @@ jobs:
       with:
         name: bandit-artifact
         path: results.sarif
-  
+    - uses: actions/upload-artifact@v4
+      with:
+        name: bandit-artifact-output
+        path: output/
   runapp:
     needs: build
     runs-on: ubuntu-latest
